// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Tooltip Central smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg class="inline-block text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-information-circle-micro">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg class="inline-block text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-information-circle-micro">
          </use>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Tooltip Interactive smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg class="inline-block text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-information-circle-micro">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center justify-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg class="inline-block text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-information-circle-micro">
          </use>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Components/Tooltip LeftBound smoke-test 1`] = `
<div class="grid grid-cols-2 gap-4 w-[37.5rem]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-64 h-64 bg-neutral-1300 flex items-center m-6 border mx-auto rounded-lg">
    <div class="inline-flex ml-2">
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg class="inline-block text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-information-circle-micro">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-64 h-64 flex items-center m-6 border mx-auto rounded-lg">
    <div theme="light"
         class="inline-flex ml-2"
    >
      <button type="button"
              aria-describedby="tooltip"
              class="p-0 relative focus:outline-none h-[1rem] "
      >
        <svg class="inline-block text-neutral-800 dark:text-neutral-500"
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-information-circle-micro">
          </use>
        </svg>
      </button>
    </div>
  </div>
</div>
`;
